--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -2,33 +2,37 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Dynamic Quote Generator</title>
 </head>
 <body>
   <h1>Dynamic Quote Generator</h1>
 
-  <!-- Dropdown for selecting category -->
-  <select id="categorySelect"></select>
+  <!-- Category Filter -->
+  <label for="categoryFilter">Filter by category:</label>
+  <select id="categoryFilter" onchange="filterQuotes()">
+    <option value="all">All Categories</option>
+    <!-- Categories will be populated dynamically -->
+  </select>
 
-  <!-- Display area for quote -->
+  <!-- Display Area -->
   <div id="quoteDisplay"></div>
 
-  <!-- Button to display a new quote -->
+  <!-- Show Quote Button -->
   <button id="newQuote">Show New Quote</button>
 
-  <!-- Input form to add new quote and category -->
+  <!-- Add Quote Form -->
   <div>
     <input id="newQuoteText" type="text" placeholder="Enter a new quote" />
     <input id="newQuoteCategory" type="text" placeholder="Enter quote category" />
     <button onclick="addQuote()">Add Quote</button>
   </div>
 
-  <!-- Import/export UI elements required by checker -->
+  <!-- Import / Export -->
   <input type="file" id="importFile" accept=".json" onchange="importFromJsonFile(event)" />
   <button onclick="exportToJsonFile()">Export Quotes</button>
 
-  <!-- Link to JavaScript functionality -->
+  <!-- JavaScript -->
   <script src="script.js"></script>
 </body>
 </html>
