--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -14,7 +14,7 @@
     <option value="all">All Categories</option>
   </select>
 
-  <!-- Sync Status Display -->
+  <!-- Sync Notification -->
   <p id="syncStatus" style="color: green; font-weight: bold;"></p>
 
   <!-- Quote Display -->
@@ -28,7 +28,7 @@
     <button onclick="addQuote()">Add Quote</button>
   </div>
 
-  <!-- Import & Export -->
+  <!-- Import / Export -->
   <input type="file" id="importFile" accept=".json" onchange="importFromJsonFile(event)" />
   <button onclick="exportToJsonFile()">Export Quotes</button>
 
